Make deprecation_warning configurable

--- a/config.json.example
+++ b/config.json.example
@@ -74,5 +74,6 @@
         "title": "Bild der Wochenstatistik"
       }
     ],
-    "deprecation_text": "Hier kann ein eigener Text für die Deprecation Warning (inkl. HTML) stehen!"
+    "deprecation_text": "Hier kann ein eigener Text für die Deprecation Warning (inkl. HTML) stehen!",
+    "deprecation_enabled": true
   }
