--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run gulp
+    - run: cp config.js build/
     - name: rsync deployments
       uses: burnett01/rsync-deployments@4.1
       with:
-        switches: -avzr --delete
+        switches: -avzr --delete --exclude .ssh
         path: build/
         remote_path: /srv/www/map.ffmuc.net/
         remote_host: ${{ matrix.target }}.ext.ffmuc.net
