--- a/config.json
+++ b/config.json
@@ -218,7 +218,7 @@
    "dataPath": [
       "https://map.ffmuc.net/data/"
    ],
-   "siteName": "Freifunk Muenchen",
+   "siteName": "Freifunk München",
    "mapLayers": [
       {
          "name": "FFMUC OSM.HOT Proxy",
