add Unifi Fallback Domain (#30)
* add Unifi Fallback

add Unifi Fallback

* Update config.json

Co-authored-by: Felix <git@xdfr.de>

--- a/config.json
+++ b/config.json
@@ -330,6 +330,10 @@
          "name": "FFMUC Freising"
       },
       {
+         "domain": "ffmuc_unifi_respondd_fallback",
+         "name": "FFMUC UniFi Fallback"
+      },
+      {
          "domain": "ffmuc",
          "name": "FFMUC (alt)"
       },
