--- a/config.example.json
+++ b/config.example.json
@@ -1,81 +1,73 @@
 {
-    "dataPath": [
-      "https://yanic.batman15.ffffm.net/"
-    ],
-    "siteName": "Freifunk Frankfurt",
-    "maxAge": 21,
-    "nodeZoom": 19,
-    "mapLayers": [
-      {
-        "name": "OpenStreetMap",
-        "url": "https://tiles.ffm.freifunk.net/{z}/{x}/{y}.png",
-        "config": {
-          "type": "osm",
-          "maxZoom": 19,
-          "attribution": "<a href='https://github.com/freifunk/meshviewer/issues' target='_blank'>Report Bug</a> | Map data &copy; <a href\"http://openstreetmap.org\">OpenStreetMap</a> contributor"
-        }
+  "dataPath": ["https://yanic.batman15.ffffm.net/"],
+  "siteName": "Freifunk Frankfurt",
+  "maxAge": 21,
+  "nodeZoom": 19,
+  "mapLayers": [
+    {
+      "name": "OpenStreetMap",
+      "url": "https://tiles.ffm.freifunk.net/{z}/{x}/{y}.png",
+      "config": {
+        "type": "osm",
+        "maxZoom": 19,
+        "attribution": "<a href='https://github.com/freifunk/meshviewer/issues' target='_blank'>Report Bug</a> | Map data &copy; <a href\"http://openstreetmap.org\">OpenStreetMap</a> contributor"
       }
-    ],
-    "fixedCenter": [
-      [
-        50.5099,
-        8.1393
-      ],
-      [
-        49.9282,
-        9.3164
-      ]
-    ],
-    "siteNames": [
-      { "site": "ffffm_60431", "name": "60431 Frankfurt am Main" } ,
-      { "site": "ffffm_default", "name": "Default" }
-    ],
-    "domainNames": [
-      { "site": "ffffm_60431", "name": "60431 Frankfurt am Main" } ,
-      { "site": "ffffm_default", "name": "Default" }
-    ],
-    "nodeInfos": [
-      {
-        "name": "Clientstatistik",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
-        "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=7&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
-        "title": "Knoten {NODE_ID} ({NODE_NAME})"
-      },
-      {
-        "name": "Traffic",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
-        "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=1&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
-        "title": "Knoten {NODE_ID} ({NODE_NAME})"
-      },
-      {
-        "name": "Uptime",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
-        "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=5&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
-        "title": "Knoten {NODE_ID} ({NODE_NAME})"
-      },
-      {
-        "name": "CPU Auslastung",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
-        "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=2&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
-        "title": "Knoten {NODE_ID} ({NODE_NAME})"
-      },
-      {
-        "name": "Neighbours",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
-        "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=4&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
-        "title": "Knoten {NODE_ID} ({NODE_NAME})"
-      }
-    ],
-    "globalInfos": [
-      {
-        "name": "Wochenstatistik",
-        "href": "https://freifunk.fail/dashboard/db/deck?from=now-7d&to=now",
-        "image": "https://freifunk.fail/render/dashboard-solo/db/deck?&panelId=22&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
-        "title": "Bild der Wochenstatistik"
-      }
-    ],
-    "hwImg": "https://map.aachen.freifunk.net/router-images/{MODEL_NORMALIZED}.svg",
-    "node_custom": "/[^a-z0-9\\-\\.]/ig",
-    "deprecation_text": "Hier kann ein eigener Text für die Deprecation Warning (inkl. HTML) stehen!",
-    "deprecation_enabled": true
-  }
+    }
+  ],
+  "fixedCenter": [
+    [50.5099, 8.1393],
+    [49.9282, 9.3164]
+  ],
+  "siteNames": [
+    { "site": "ffffm_60431", "name": "60431 Frankfurt am Main" },
+    { "site": "ffffm_default", "name": "Default" }
+  ],
+  "domainNames": [
+    { "site": "ffffm_60431", "name": "60431 Frankfurt am Main" },
+    { "site": "ffffm_default", "name": "Default" }
+  ],
+  "nodeInfos": [
+    {
+      "name": "Clientstatistik",
+      "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
+      "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=7&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
+      "title": "Knoten {NODE_ID} ({NODE_NAME})"
+    },
+    {
+      "name": "Traffic",
+      "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
+      "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=1&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
+      "title": "Knoten {NODE_ID} ({NODE_NAME})"
+    },
+    {
+      "name": "Uptime",
+      "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
+      "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=5&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
+      "title": "Knoten {NODE_ID} ({NODE_NAME})"
+    },
+    {
+      "name": "CPU Auslastung",
+      "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
+      "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=2&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
+      "title": "Knoten {NODE_ID} ({NODE_NAME})"
+    },
+    {
+      "name": "Neighbours",
+      "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
+      "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=4&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
+      "title": "Knoten {NODE_ID} ({NODE_NAME})"
+    }
+  ],
+  "globalInfos": [
+    {
+      "name": "Wochenstatistik",
+      "href": "https://freifunk.fail/dashboard/db/deck?from=now-7d&to=now",
+      "image": "https://freifunk.fail/render/dashboard-solo/db/deck?&panelId=22&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
+      "title": "Bild der Wochenstatistik"
+    }
+  ],
+  "hwImg": "https://map.aachen.freifunk.net/router-images/{MODEL_NORMALIZED}.svg",
+  "node_custom": "/[^a-z0-9\\-\\.]/ig",
+  "deprecation_text": "Hier kann ein eigener Text für die Deprecation Warning (inkl. HTML) stehen!",
+  "deprecation_enabled": true
+}
