--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "gulp-stylelint": "^13.0.0",
     "gulp-uglify": "^3.0.2",
     "prettier": "3.0.3",
-    "sass": "^1.66.1",
-    "stylelint": "^13.10.0",
-    "stylelint-config-standard": "^22.0.0"
+    "sass": "^1.66.1"
   },
   "eslintConfig": {
     "env": {
