--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "3.0.3",
     "sass": "^1.69.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.16.5"
   },
