--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite-plugin-pwa": "^0.17.3"
   },
   "dependencies": {
+    "@types/d3-zoom": "^3.0.6",
     "@types/leaflet": "^1.9.7",
     "@types/node-polyglot": "^2.4.4",
     "d3-collection": "^1.0.7",
