--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/d3-zoom": "^3.0.6",
     "@types/leaflet": "^1.9.7",
     "@types/node-polyglot": "^2.4.4",
+    "@types/rbush": "^3.0.1",
     "d3-collection": "^1.0.7",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
