--- a/package.json
+++ b/package.json
@@ -21,16 +21,22 @@
     "vite-plugin-pwa": "^0.17.3"
   },
   "dependencies": {
+    "@types/d3-drag": "^3.0.5",
+    "@types/d3-ease": "^3.0.1",
+    "@types/d3-force": "^3.0.7",
     "@types/d3-interpolate": "^3.0.3",
+    "@types/d3-timer": "^3.0.1",
     "@types/d3-zoom": "^3.0.6",
     "@types/leaflet": "^1.9.7",
     "@types/node-polyglot": "^2.4.4",
     "@types/rbush": "^3.0.1",
     "d3-collection": "^1.0.7",
     "d3-drag": "^3.0.0",
+    "d3-ease": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-interpolate": "^3.0.1",
     "d3-selection": "^3.0.0",
+    "d3-timer": "^3.0.1",
     "d3-zoom": "^3.0.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.4",
