--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "vite-plugin-pwa": "^0.17.3"
   },
   "dependencies": {
+    "@types/d3-collection": "^1.0.12",
     "@types/d3-drag": "^3.0.5",
     "@types/d3-ease": "^3.0.1",
     "@types/d3-force": "^3.0.7",
     "@types/d3-interpolate": "^3.0.3",
+    "@types/d3-selection": "^3.0.8",
     "@types/d3-timer": "^3.0.1",
     "@types/d3-zoom": "^3.0.6",
     "@types/leaflet": "^1.7.1",
