--- a/config.json
+++ b/config.json
@@ -376,7 +376,9 @@
          "href": "https://ffmuc.net/impressum/"
       }
    ],
-
+    "devicePictures": "https://map.aachen.freifunk.net/pictures-svg/{MODEL_NORMALIZED}.svg",
+    "devicePicturesSource": "<a href='https://github.com/freifunk/device-pictures'>https://github.com/freifunk/device-pictures</a>",
+    "devicePicturesLicense": "CC-BY-NC-SA 4.0",
     "deprecation_text": "Dieses Gerät ist leider veraltet und wird nicht mehr durch Software-Updates unterstützt - <a href='https://ffmuc.net/freifunkmuc/2019/07/11/austausch-aelterer-geraete/'>Mehr Infos</a>",
     "deprecation_enabled": true
 }
