Use more const, simplify returns & docs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/freifunk/meshviewer/issues"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^6.17.0",
     "@vite-pwa/assets-generator": "^0.0.10",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
