feat: add ffmuc_ulm domain

--- a/config.json
+++ b/config.json
@@ -225,7 +225,7 @@
          "url": "https://tiles.ext.ffmuc.net/osm/{z}/{x}/{y}.png",
          "config": {
             "maxZoom": 19,
-            "attribution": "&copy; Openstreetmap | &copy; <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a>"
+            "attribution": "&copy; OpenStreetMap | &copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a>"
          }
       },
       {
@@ -233,12 +233,12 @@
          "url": "https://tiles.ext.ffmuc.net/hot/{z}/{x}/{y}.png",
          "config": {
             "maxZoom": 20,
-            "attribution": "&copy; Openstreetmap France | &copy; <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a>"
+            "attribution": "&copy; OpenStreetMap France | &copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a>"
          }
       },
       {
          "name": "Esri.WorldImagery",
-         "url": "//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
+         "url": "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
          "config": {
             "maxZoom": 20,
             "attribution": "Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community"
@@ -250,7 +250,7 @@
          "name": "HERE",
          "url": "https://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id=YOUR_KEY&app_code=YOUR_CODE&lg=deu",
          "config": {
-            "attribution": "Map &copy; 1987-2014 <a href=\"http://developer.here.com\">HERE</a>",
+            "attribution": "Map &copy; 1987-2024 <a href=\"https://developer.here.com\">HERE</a>",
             "subdomains": "1234",
             "maxZoom": 20
          }
@@ -259,7 +259,7 @@
          "name": "HERE.hybridDay",
          "url": "https://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/newest/{variant}/{z}/{x}/{y}/256/png8?app_id=YOUR_KEY&app_code=YOUR_CODE&lg=deu",
          "config": {
-            "attribution": "Map &copy; 1987-2014 <a href=\"http://developer.here.com\">HERE</a>",
+            "attribution": "Map &copy; 1987-2024 <a href=\"https://developer.here.com\">HERE</a>",
             "subdomains": "1234",
             "variant": "hybrid.day",
             "maxZoom": 20
@@ -343,6 +343,10 @@
       },
       {
          "domain": "ffmuc_freising",
+         "name": "Freising"
+      },
+      {
+         "domain": "ffmuc_ulm",
          "name": "Freising"
       },
       {
