--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite-plugin-pwa": "^1.2.0"
   },
   "dependencies": {
+    "@maplibre/maplibre-gl-leaflet": "^0.0.17",
     "@types/d3-collection": "^1.0.13",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-ease": "^3.0.2",
