--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "bugs": {
     "url": "https://github.com/freifunk/meshviewer/issues"
   },
+  "type": "module",
   "devDependencies": {
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.51.0",
@@ -31,7 +32,7 @@
     "@types/d3-zoom": "^3.0.8",
     "@types/leaflet": "^1.7.1",
     "@types/node-polyglot": "^2.4.4",
-    "@types/rbush": "^3.0.1",
+    "@types/rbush": "^4.0.0",
     "d3-collection": "^1.0.7",
     "d3-drag": "^3.0.0",
     "d3-ease": "^3.0.1",
@@ -45,8 +46,8 @@
     "navigo": "^7.1.2",
     "node-polyglot": "2.5.0",
     "promise-polyfill": "^8.2.0",
-    "rbush": "^3.0.1",
-    "snabbdom": "^0.7.4"
+    "rbush": "^4.0.0",
+    "snabbdom": "^3.6.2"
   },
   "scripts": {
     "dev": "vite",
