--- a/.github/workflows/release-meshviewer.yml
+++ b/.github/workflows/release-meshviewer.yml
@@ -19,23 +19,16 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: "cd build; zip -r ../meshviewer-build.zip .; cd .."
-      - name: Create Release
+      - name: Create and Upload Release Asset
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: Release ${{ github.ref }}
           draft: true
           prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./meshviewer-build.zip
-          asset_name: meshviewer-build.zip
-          asset_content_type: application/zip
+          files: |
+            ./meshviewer-build.zip
+          generate_release_notes: true
