--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/node": "^24.0.7",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.1.0",
@@ -31,7 +32,7 @@
     "@types/d3-timer": "^3.0.2",
     "@types/d3-zoom": "^3.0.8",
     "@types/leaflet": "^1.9.4",
-    "@types/node-polyglot": "^2.4.4",
+    "@types/node-polyglot": "^2.5.0",
     "@types/rbush": "^4.0.0",
     "d3-collection": "^1.0.7",
     "d3-drag": "^3.0.0",
