--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
-    "prettier": "3.5.2",
+    "prettier": "^3.6.2",
     "sass": "^1.77.8",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
