fix: migrate eslint configs and enable es2020

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es2020",
     "allowJs": true,
     "module": "NodeNext",
     "moduleResolution": "NodeNext"
