npm: fix tsconfig
this is required for compatibility with client libraries which are imported differently

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es2020",
     "allowJs": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "esModuleInterop": true
   },
   "include": ["lib"]
 }
