npm: add node types to fix build issues

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/node": "^24.9.2",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
